# portfolio

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
portfolio/: __init__.py  settings.py
